--- a/README.Rmd
+++ b/README.Rmd
@@ -13,12 +13,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-# dynIRTtest
+# (temporary name) dynIRTtest
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of dynIRTtest is to ...
+We will change the package name later. 
+Please edit the `README.Rmd` file and do not directly edit the `README.md` file.
 
 ## Installation
 
