--- a/README.Rmd
+++ b/README.Rmd
@@ -29,3 +29,7 @@ You can install the development version of dynIRTtest from [GitHub](https://gith
 # install.packages("devtools")
 devtools::install_github("tomoya-sasaki/dynIRTtest")
 ```
+
+## TODOs
+- [] Add descriptions
+- [] Figure specifications
