--- a/README.Rmd
+++ b/README.Rmd
@@ -33,3 +33,6 @@ devtools::install_github("tomoya-sasaki/dynIRTtest")
 ## TODOs
 - [ ] Add descriptions
 - [ ] Figure specifications
+
+## Explanation
+* How to use `dynIRTtest`
