--- a/README.Rmd
+++ b/README.Rmd
@@ -18,6 +18,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
+## Misc
+
 We will change the package name later. 
 Please edit the `README.Rmd` file and do not directly edit the `README.md` file.
 
@@ -30,11 +32,6 @@ You can install the development version of **dynIRTtest** from [GitHub](https://
 devtools::install_github("tomoya-sasaki/dynIRTtest")
 ```
 
-## TODOs
-
-- [ ] Add descriptions
-- [ ] Figure specifications
-
 ## Explanation
 
 The R package **dynIRTtest** fits dynamic multidimensional factor models with binary, ordinal,
@@ -42,19 +39,22 @@ and/or metric indicators. To do so, it uses the Bayesian programming language
 Stan, as linked to R by the package **CmdStanR**. 
 
 The basic workflow involves the following steps:
+
   1. Shape the data into the list format required by **CmdStanR**.
   2. Fit a dynamic factor model to the data.
-  3. Extract draws from the 
+  3. Extract posterior draws from the fitted object
+  4. Identify and label parameter draws
+  5. Visualize the results
 
-### Step 1: load data
+### Step 0: load data
 
-Load data on state societal outcomes from 2020 and 2021.
+* The package contsins state-level societal outcomes from 2020 and 2021.
 
 ```{r, eval=FALSE}
 data("social_outcomes_2020_2021")
 ```
 
-### Step 2: Reshape data
+### Step 1: Reshape data
 
 ```{r, eval=FALSE}
 shaped_data <- shape_data(
@@ -69,7 +69,9 @@ shaped_data <- shape_data(
 
 ```
 
-### Step 3: Fit the model
+### Step 2: Fit the model
+
+* You can specify additional arguments for `cmdstanr::sample()`
 
 ```{r,eval=FALSE}
 fitted <- fit(
@@ -89,14 +91,61 @@ fitted <- fit(
     iter_warmup = 50,
     iter_sampling = 50,
     adapt_delta = .9,
-    refresh = 10,
-    seed = 123
+    refresh = 10, # how often to update printed screen updates
+    seed = 123,
+    iter_warmup = 1000, # burn in
+    iter_sampling = 1000 # samples for posterior inference
 )
+```
+
+### Step 3: Extract Draws
+
+```{r,eval=FALSE}
+# extract posterior draws
+fitted_draws <- extract_draws(fitted)
+
+# convergence diagnostics
+checked <- check_convergence(fitted_draws)
 ```
 
 ### Step 4: Post analysis
 
 ```{r,eval=FALSE}
+# identify the sign and rotation of the parameter draws
+# set rotate = FALSE to skip rotation
+identified <- identify_draws(fitted_draws, rotate = TRUE)
+
+# label the posterior draws
+labeled <- label_draws(identified)
+
+```
+
+### Step 5: Visualization
+
+* There are curretly four plotting functions.
+* You can use `item_labels` argument in `plot_intercept` and `plot_loadings` to rename item labels to show in plots. Similarly, `unit_labels` argument is available for `plot_scores_ave` and `plot_scores_timetrend` to change unit labels.
+
+
+```{r, eval = FALSE}
+# plot intercept
+p <- plot_intercept(labeled)
+
+# plot item loadings
+p <- plot_loadings(labeled)
+
+# plot average scores across different units
+p <- plot_scores_ave(labeled)
+
+# plot time series factor scores
+p <- plot_scores_timetrend(labeled)
+
+# each element is the new label
+new_unit_names <- state.name
+# names assigned to each element are the original labels
+names(new_unit_names) <- state.abb
+
+p <- plot_scores_ave(labeled, unit_labels = new_unit_names)
+
 
 ```
 
