--- a/README.Rmd
+++ b/README.Rmd
@@ -18,10 +18,15 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
+## TODOs
+
+- [x] Add descriptions
+- [ ] Figure specifications
+
 ## Misc
 
-We will change the package name later. 
-Please edit the `README.Rmd` file and do not directly edit the `README.md` file.
+* We will change the package name later. 
+* Please edit the `README.Rmd` file and do not directly edit the `README.md` file.
 
 ## Installation
 
@@ -53,7 +58,7 @@ The basic workflow involves the following steps:
 library(dynIRTtest)
 ```
 
-### Step 1: Reshape data
+### Step 1: Shape data
 
 ```{r, eval=FALSE}
 ## Load data on societal attributes of U.S. states in 2020 and 2021
