--- a/README.Rmd
+++ b/README.Rmd
@@ -45,6 +45,7 @@ programming language [Stan](https://mc-stan.org), as linked to R by the package
 [**CmdStanR**](https://mc-stan.org/cmdstanr/).
 
 The basic workflow involves the following steps:
+
   1. Shape the data into the list format required by **CmdStanR**
      (`shape_data()`).
   2. Fit a dynamic factor model to the data.
@@ -132,7 +133,7 @@ labeled <- label_draws(identified)
 
 ### Step 5: Visualization
 
-* There are curretly four plotting functions.
+* There are currently four plotting functions.
 * You can use `item_labels` argument in `plot_intercept` and `plot_loadings` to rename item labels to show in plots. Similarly, `unit_labels` argument is available for `plot_scores_ave` and `plot_scores_timetrend` to change unit labels.
 
 
@@ -149,6 +150,7 @@ p <- plot_scores_ave(labeled)
 # plot time series factor scores
 p <- plot_scores_timetrend(labeled)
 
+# Change unit labels to show in plot
 # each element is the new label
 new_unit_names <- state.name
 # names assigned to each element are the original labels
